objects/Move_outs__c.object
<CustomObject>
    <fields>
        <fullName>Bryant_Park__c</fullName>
        <label>Bryant Park</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charging_Bull__c</fullName>
        <label>Charging Bull</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chinatown__c</fullName>
        <label>Chinatown</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Empire_State__c</fullName>
        <label>Empire State</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ended_on_updated_at__c</fullName>
        <label>Ended on updated at</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fort_Point__c</fullName>
        <label>Fort Point</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulton_Center__c</fullName>
        <label>Fulton Center</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Golden_Gate__c</fullName>
        <label>Golden Gate</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Madison__c</fullName>
        <label>Madison</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meatpacking__c</fullName>
        <label>Meatpacking</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoMad__c</fullName>
        <label>NoMad</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Park_South__c</fullName>
        <label>Park South</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SOMA__c</fullName>
        <label>SOMA</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Soho_West__c</fullName>
        <label>Soho West</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Soho__c</fullName>
        <label>Soho</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>South_Lake_Union__c</fullName>
        <label>South Lake Union</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>South_Station__c</fullName>
        <label>South Station</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>West_Broadway__c</fullName>
        <label>West Broadway</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wonder_Bread__c</fullName>
        <label>Wonder Bread</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Move out</label>
    <nameField>
        <label>Move outs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Move_out</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>